<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agora</string>
    <string name="title_section1">User</string>
    <string name="title_section2">All Notes</string>
    <string name="title_section3">Projects</string>
    <string name="title_section4">Collaborators</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Add</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_project_list">ProjectList</string>
    <string name="hello_world">Hello world!</string>
    <string name="CreateProject">Create New Project</string>
    <string name="title_activity_create_repo">CreateRepo</string>
    <string name="btn_createproject">Create</string>
    <string name="add">add</string>
    <string name="title_activity_new_note">NewNoteActivity</string>
    <string name="title_activity_star_screen">Agora</string>
    <string name="title_activity_login_screnn">Sign In</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_register">Register Activity</string>
    <string name="title_activity_sync_actiity">SyncActiity</string>
    <string name="Sync">Getting Projects from Server</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu">Menu</string>
    <string name="title_activity_navigation_draw">NavigationDraw</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="btn_textColour">Text Colour</string>
    <string name="btn_BackColour">Background Colour</string>
    <string name="save">Save</string>
    <string name="text_colour">Text Colour</string>
    <string name="bgColour">Background Colour</string>
    <string name="cpick">Colour Picker</string>
    <string name="close">Close</string>
    <string name="title_activity_colour_picker">ColourPicker</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="share">share</string>
    <string name="allnotes">All Notes</string>
    <string name="project">projects</string>
    <string name="sendto">Send to</string>
    <string name="projectnamehere">Project name here!</string>
    <string name="smallt">Small Text</string>
    <string name="mediumt">Medium Text</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="register">Register</string>
    <string name="noteurl">Agora Note URL:</string>
    <string name="firstname">First Name</string>
    <string name="portnum">Port number</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="thumbuser">Thumbnail of user</string>
    <string name="userphoto">Userphoto</string>
    <string name="lime">lime</string>
    <string name="brown">brown</string>
    <string name="mustard">mustard</string>
    <string name="blue">blue</string>
    <string name="red">red</string>
    <string name="lgrey">lgrey</string>
    <string name="green">green</string>
    <string name="dgrey">darkgrey</string>
    <string name="orange">orange</string>

</resources>
