<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="10dp"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cpick"
        android:id="@+id/tx_username"
        android:singleLine="true"
        android:textAlignment="center" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="2"
        android:alignmentMode="alignBounds"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="5dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/im_orange"
            android:background="@drawable/orange"
            android:onClick="imageClick"
            android:tag="#ff6600"
            android:padding="5dp"
            android:contentDescription="@string/orange" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/im_darkgrey"
            android:background="@drawable/darkgrey"
            android:onClick="imageClick"
            android:tag="#2d2d2d"
            android:padding="5dp"
            android:contentDescription="@string/dgrey"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/im_blue"
            android:background="@drawable/blue"
            android:onClick="imageClick"
            android:tag="#104ba9"
            android:padding="5dp"
            android:contentDescription="@string/blue"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/im_green"
            android:background="@drawable/green"
            android:onClick="imageClick"
            android:tag="#1db312"
            android:padding="5dp"
            android:contentDescription="@string/green"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/im_lgrey"
            android:background="@drawable/lgrey"
            android:onClick="imageClick"
            android:tag="#e0e0e0"
            android:padding="5dp"
            android:contentDescription="@string/lgrey"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/im_red"
            android:background="@drawable/red"
            android:onClick="imageClick"
            android:tag="#ff270d"
            android:padding="5dp"
            android:contentDescription="@string/red"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/im_lblue"
            android:background="@drawable/lblue"
            android:onClick="imageClick"
            android:padding="5dp"
            android:tag="#51dee0"
            android:contentDescription="@string/blue"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/im_mustard"
            android:background="@drawable/musturd"
            android:onClick="imageClick"
            android:tag="#ffcb25"
            android:padding="5dp"
            android:contentDescription="@string/mustard"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/im_brown"
            android:background="@drawable/brown"
            android:onClick="imageClick"
            android:tag="#834c24"
            android:padding="5dp"
            android:contentDescription="@string/brown"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/im_lime"
            android:background="@drawable/lime"
            android:onClick="imageClick"
            android:tag="#00ff00"
            android:padding="5dp"
            android:contentDescription="@string/lime"/>

    </GridLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:id="@+id/btnClose"
        android:onClick="closeClick" />

</LinearLayout>