<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.org.samhipwell.agora.MainActivity" >
    <item android:id="@+id/projectbutton"
        android:title="projects"
        android:icon="@drawable/notepad"
        android:showAsAction="always" />
    <item android:id="@+id/createbutton"
        android:title="@string/add"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always" />
    <item android:id="@+id/sharebutton"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        android:showAsAction="always"
        />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/settings"
        android:showAsAction="always" />
</menu>