<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.org.samhipwell.agora.loginScrenn"
    android:background="#ff2d2d2d">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:layout_alignParentTop="true"
        android:layout_marginTop="124dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:hint="@string/username"
        android:textColor="#ffe1e1e1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:layout_below="@+id/etUsername"
        android:layout_marginTop="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etUsername"
        android:textColor="#ffe1e1e1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:id="@+id/btLogin"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:onClick="signinClick"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btRegister"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="registerClick"/>

</RelativeLayout>
