<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.org.samhipwell.agora.SettingActivity"
    android:background="#ff2d2d2d">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btn_Setting_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="settingSaveClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/noteurl"
        android:id="@+id/tx_username"
        android:layout_marginTop="71dp"
        android:layout_toStartOf="@+id/btn_Setting_save"
        android:layout_alignParentTop="true"
        android:textColor="#ffe1e1e1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etURL"
        android:layout_below="@+id/tx_username"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etPort"
        android:textColor="#ffe1e1e1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/portnum"
        android:id="@+id/porttext"
        android:layout_below="@+id/etURL"
        android:layout_alignStart="@+id/tx_username"
        android:layout_marginTop="35dp"
        android:textColor="#ffe1e1e1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etPort"
        android:layout_below="@+id/porttext"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffe1e1e1" />

</RelativeLayout>
